Horizontal scrolling fixing Footer problem

--- a/segma_front/src/components/Header.css
+++ b/segma_front/src/components/Header.css
@@ -65,7 +65,7 @@ p{
 * Sidebar component
 */
 #sidebar{
-    margin-left: 34px;
+    margin-left: 50px;
 }
 #sidebar button{
     margin-right: 10px;
